Forzando actualización para detección de lenguaje

--- a/PRUEBAS_codigo.ipynb
+++ b/PRUEBAS_codigo.ipynb
@@ -57,23 +57,9 @@
     "\n",
     "# Escribir el JSON a un archivo en la ruta especificada\n",
     "with open(ruta_archivo, 'w') as archivo:\n",
-    "    json.dump(credenciales_list, archivo, indent=2)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Drive"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 194,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os\n",
+    "    json.dump(credenciales_list, archivo, indent=2)\n",
+    "\n",
+    "    import os\n",
     "import google_drive_request as gdr\n",
     "\n",
     "credenciales=r'C:\\Users\\elaut\\OneDrive\\Escritorio\\Pasantia\\arenaPrefect\\1.3.credenciales_drive\\credenciales_drive.json'\n",
